test/corpus/code.txt
================================================================================
Code span
================================================================================
[code]
--------------------------------------------------------------------------------

(document
  (paragraph
    (code_span)))

================================================================================
Code span with content
================================================================================
[let x = 1]
--------------------------------------------------------------------------------

(document
  (paragraph
    (code_span)))

================================================================================
Code span with balanced brackets
================================================================================
[foo[bar]baz]
--------------------------------------------------------------------------------

(document
  (paragraph
    (code_span)))

================================================================================
Simple code block
================================================================================
{[let x = 1]}
--------------------------------------------------------------------------------

(document
  (code_block
    (code_block_content)))

================================================================================
Multi-line code block
================================================================================
{[
let x = 1
let y = 2
]}
--------------------------------------------------------------------------------

(document
  (code_block
    (code_block_content)))

================================================================================
Code block with language
================================================================================
{@ocaml[let x = 1]}
--------------------------------------------------------------------------------

(document
  (code_block_with_lang
    (language)
    (code_block_content)))

================================================================================
Code block with language and delimiter
================================================================================
{delim@ocaml[let x = 1]delim}
--------------------------------------------------------------------------------

(document
  (code_block_with_lang
    (code_block_open_delimiter)
    (language)
    (code_block_content)
    (code_block_delimiter_close)))

================================================================================
Empty code span
================================================================================
[]
--------------------------------------------------------------------------------

(document
  (paragraph
    (code_span)))

================================================================================
Empty code block
================================================================================
{[]}
--------------------------------------------------------------------------------

(document
  (code_block))

================================================================================
Code block with language and metadata
================================================================================
{@ocaml kind=toplevel[let x = 1]}
--------------------------------------------------------------------------------

(document
  (code_block_with_lang
    (language)
    (code_block_meta)
    (code_block_content)))

================================================================================
Code block without a language tag
================================================================================
{@[let x = 1]}
--------------------------------------------------------------------------------

(document
  (code_block_with_lang
    (code_block_content)))

================================================================================
Delimited code block containing other code blocks
================================================================================
{example@text[
Inline [code].

{[
let _ = "Block code"
]}

{foo@text[
Code block with {[inner]}
]foo}
]example}
--------------------------------------------------------------------------------

(document
  (code_block_with_lang
    (code_block_open_delimiter)
    (language)
    (code_block_content)
    (code_block_delimiter_close)))

================================================================================
Code block with a result block
================================================================================
{delim@ocaml version<5.3[
  let f = 1 + "2"
]delim[
{err@mdx-error[
Error: This expression has type string
]err}]}
--------------------------------------------------------------------------------

(document
  (code_block_with_lang
    (code_block_open_delimiter)
    (language)
    (code_block_meta)
    (code_block_content)
    (code_block_delimiter_close)
    (code_block_output
      (code_block_with_lang
        (code_block_open_delimiter)
        (language)
        (code_block_content)
        (code_block_delimiter_close)))))

================================================================================
Undelimited code block keeps a mismatched terminator
================================================================================
{@ocaml[
let x = 1
]err}
still code
]}
--------------------------------------------------------------------------------

(document
  (code_block_with_lang
    (language)
    (code_block_content)))

================================================================================
Plain code block after a delimited one
================================================================================
{foo@text[
first
]foo}

{[
second
]}
--------------------------------------------------------------------------------

(document
  (code_block_with_lang
    (code_block_open_delimiter)
    (language)
    (code_block_content)
    (code_block_delimiter_close))
  (code_block
    (code_block_content)))

================================================================================
Undelimited code block keeps a delimited terminator
================================================================================
{[
let xs = [1]foo}
]}
--------------------------------------------------------------------------------

(document
  (code_block
    (code_block_content)))

================================================================================
Result block holding markup rather than code
================================================================================
{delim@ocaml[
let x = 1
]delim[
The toplevel prints {b 1}.
]}
--------------------------------------------------------------------------------

(document
  (code_block_with_lang
    (code_block_open_delimiter)
    (language)
    (code_block_content)
    (code_block_delimiter_close)
    (code_block_output
      (paragraph
        (word)
        (word)
        (word)
        (bold
          (word))
        (word)))))
