test/corpus/headings.txt
================================================================================
Simple heading level 1
================================================================================
{1 Hello}
--------------------------------------------------------------------------------

(document
  (heading
    (heading_marker)
    (word)))

================================================================================
Heading level 0
================================================================================
{0 Title}
--------------------------------------------------------------------------------

(document
  (heading
    (heading_marker)
    (word)))

================================================================================
Heading with label
================================================================================
{2:my-section Section Title}
--------------------------------------------------------------------------------

(document
  (heading
    (heading_marker_with_label)
    (word)
    (word)))

================================================================================
Heading with multiple words
================================================================================
{3 One Two Three}
--------------------------------------------------------------------------------

(document
  (heading
    (heading_marker)
    (word)
    (word)
    (word)))

================================================================================
Heading with inline markup
================================================================================
{1 Hello {b world}}
--------------------------------------------------------------------------------

(document
  (heading
    (heading_marker)
    (word)
    (bold
      (word))))

================================================================================
Heading level 4
================================================================================
{4 Level Four}
--------------------------------------------------------------------------------

(document
  (heading
    (heading_marker)
    (word)
    (word)))

================================================================================
Heading level 5
================================================================================
{5 Level Five}
--------------------------------------------------------------------------------

(document
  (heading
    (heading_marker)
    (word)
    (word)))

================================================================================
Heading with code span
================================================================================
{1 Title [code] end}
--------------------------------------------------------------------------------

(document
  (heading
    (heading_marker)
    (word)
    (code_span)
    (word)))

================================================================================
Heading with escape
================================================================================
{1 A \{ B}
--------------------------------------------------------------------------------

(document
  (heading
    (heading_marker)
    (word)
    (escape_sequence)
    (word)))

================================================================================
Heading with raw markup
================================================================================
{0 Fmt {%html: <span class="version">v0.9.0</span>%}}
--------------------------------------------------------------------------------

(document
  (heading
    (heading_marker)
    (word)
    (raw_markup)))

================================================================================
Heading spanning a newline
================================================================================
{1 A rather long heading
that wraps}
--------------------------------------------------------------------------------

(document
  (heading
    (heading_marker)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)))

================================================================================
Labelled heading spanning a newline
================================================================================
{2:the_label A heading with a label
that wraps}
--------------------------------------------------------------------------------

(document
  (heading
    (heading_marker_with_label)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)))
