test/corpus/lists.txt
================================================================================
Unordered list with dash items
================================================================================
{ul
{- first}
{- second}
}
--------------------------------------------------------------------------------

(document
  (unordered_list
    (dash_list_item
      (paragraph
        (word)))
    (dash_list_item
      (paragraph
        (word)))))

================================================================================
Ordered list with li items
================================================================================
{ol
{li first}
{li second}
}
--------------------------------------------------------------------------------

(document
  (ordered_list
    (li_list_item
      (paragraph
        (word)))
    (li_list_item
      (paragraph
        (word)))))

================================================================================
Nested list
================================================================================
{ul
{- outer {ul
{- inner}
}}
}
--------------------------------------------------------------------------------

(document
  (unordered_list
    (dash_list_item
      (paragraph
        (word))
      (unordered_list
        (dash_list_item
          (paragraph
            (word)))))))

================================================================================
Light unordered list with dash
================================================================================
- first
- second
--------------------------------------------------------------------------------

(document
  (light_list
    (light_list_item
      (word))
    (light_list_item
      (word))))

================================================================================
Light ordered list with plus
================================================================================
+ first
+ second
--------------------------------------------------------------------------------

(document
  (light_list
    (light_list_item
      (word))
    (light_list_item
      (word))))

================================================================================
Light list with inline markup
================================================================================
- {b bold} item
- {i italic} item
--------------------------------------------------------------------------------

(document
  (light_list
    (light_list_item
      (bold
        (word))
      (word))
    (light_list_item
      (italic
        (word))
      (word))))

================================================================================
Unordered list with mixed dash and li items
================================================================================
{ul
{- dash item}
{li li item}
}
--------------------------------------------------------------------------------

(document
  (unordered_list
    (dash_list_item
      (paragraph
        (word)
        (word)))
    (li_list_item
      (paragraph
        (word)
        (word)))))

================================================================================
List item with code block
================================================================================
{ul
{- item with code
{[let x = 1]}
}
}
--------------------------------------------------------------------------------

(document
  (unordered_list
    (dash_list_item
      (paragraph
        (word)
        (word)
        (word))
      (code_block
        (code_block_content)))))

================================================================================
Empty list item
================================================================================
{ul
{- }
}
--------------------------------------------------------------------------------

(document
  (unordered_list
    (dash_list_item)))

================================================================================
Ordered list with dash items
================================================================================
{ol
{- first}
{- second}
}
--------------------------------------------------------------------------------

(document
  (ordered_list
    (dash_list_item
      (paragraph
        (word)))
    (dash_list_item
      (paragraph
        (word)))))

================================================================================
Light list item continued on the next line
================================================================================
- a lock file (with extension [.opam.locked]) containing references to
  exact versions
- a set of opam files
--------------------------------------------------------------------------------

(document
  (light_list
    (light_list_item
      (word)
      (word)
      (word)
      (word)
      (word)
      (code_span)
      (word)
      (word)
      (word)
      (word)
      (word)
      (word))
    (light_list_item
      (word)
      (word)
      (word)
      (word)
      (word))))

================================================================================
Blank line ends a light list
================================================================================
- one

- two
--------------------------------------------------------------------------------

(document
  (light_list
    (light_list_item
      (word)))
  (light_list
    (light_list_item
      (word))))

================================================================================
Light ordered list item continued on the next line
================================================================================
+ first item that
  continues onto the next line
+ second item
--------------------------------------------------------------------------------

(document
  (light_list
    (light_list_item
      (word)
      (word)
      (word)
      (word)
      (word)
      (word)
      (word)
      (word))
    (light_list_item
      (word)
      (word))))

================================================================================
Light list item with markup and a code span
================================================================================
- see {!Foo.bar} and the [t] type
  for the details
--------------------------------------------------------------------------------

(document
  (light_list
    (light_list_item
      (word)
      (simple_reference
        (reference_target))
      (word)
      (word)
      (code_span)
      (word)
      (word)
      (word)
      (word))))
