test/corpus/math.txt
================================================================================
Math span
================================================================================
{m x^2}
--------------------------------------------------------------------------------

(document
  (paragraph
    (math_span)))

================================================================================
Math block
================================================================================
{math
x^2 + y^2
}
--------------------------------------------------------------------------------

(document
  (math_block))

================================================================================
Math span with balanced braces
================================================================================
{m \frac{a}{b}}
--------------------------------------------------------------------------------

(document
  (paragraph
    (math_span)))

================================================================================
Math block with LaTeX
================================================================================
{math \sum_{i=0}^n x^i}
--------------------------------------------------------------------------------

(document
  (math_block))

================================================================================
Math span in paragraph
================================================================================
the formula {m x^2} is quadratic
--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (word)
    (math_span)
    (word)
    (word)))
