test/corpus/misc.txt
================================================================================
Module list
================================================================================
{!modules: Foo Bar Baz}
--------------------------------------------------------------------------------

(document
  (module_list
    (module_name)
    (module_name)
    (module_name)))

================================================================================
Raw markup without target
================================================================================
{%<b>raw</b>%}
--------------------------------------------------------------------------------

(document
  (paragraph
    (raw_markup)))

================================================================================
Raw markup with target
================================================================================
{%html:<b>raw</b>%}
--------------------------------------------------------------------------------

(document
  (paragraph
    (raw_markup)))

================================================================================
Paragraph style left
================================================================================
{L left aligned}
--------------------------------------------------------------------------------

(document
  (paragraph_style
    (word)
    (word)))

================================================================================
Paragraph style center
================================================================================
{C centered}
--------------------------------------------------------------------------------

(document
  (paragraph_style
    (word)))

================================================================================
Paragraph style right
================================================================================
{R right aligned}
--------------------------------------------------------------------------------

(document
  (paragraph_style
    (word)
    (word)))

================================================================================
Module list with single module
================================================================================
{!modules: X}
--------------------------------------------------------------------------------

(document
  (module_list
    (module_name)))

================================================================================
Paragraph style with markup
================================================================================
{L {b bold} text}
--------------------------------------------------------------------------------

(document
  (paragraph_style
    (bold
      (word))
    (word)))

================================================================================
Empty document
================================================================================

--------------------------------------------------------------------------------

(document)

================================================================================
Raw markup inside a paragraph
================================================================================
This is a {%html: <strong>strong</strong>%} tag.
--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (word)
    (word)
    (raw_markup)
    (word)))
