test/corpus/paragraphs.txt
================================================================================
Single word
================================================================================
hello
--------------------------------------------------------------------------------

(document
  (paragraph
    (word)))

================================================================================
Multiple words
================================================================================
hello world
--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (word)))

================================================================================
Escape sequences
================================================================================
\{ \} \[ \] \@
--------------------------------------------------------------------------------

(document
  (paragraph
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)))

================================================================================
Minus in text
================================================================================
a - b
--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (minus)
    (word)))

================================================================================
Plus in text
================================================================================
a + b
--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (plus)
    (word)))

================================================================================
Dash-started word
================================================================================
-flag
--------------------------------------------------------------------------------

(document
  (paragraph
    (word)))

================================================================================
Two paragraphs separated by blank line
================================================================================
hello

world
--------------------------------------------------------------------------------

(document
  (paragraph
    (word))
  (paragraph
    (word)))

================================================================================
Paragraph with mixed inline elements
================================================================================
word1 {b bold} [code] {i italic} word2
--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (bold
      (word))
    (code_span)
    (italic
      (word))
    (word)))

================================================================================
Multiple lines in paragraph
================================================================================
first line
second line
--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (word))
  (paragraph
    (word)
    (word)))

================================================================================
Paragraph with link and reference
================================================================================
see {!Foo} at {:https://example.com}
--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (simple_reference
      (reference_target))
    (word)
    (simple_link
      (link_target))))
