test/corpus/references.txt
================================================================================
Simple reference
================================================================================
{!Foo.bar}
--------------------------------------------------------------------------------

(document
  (paragraph
    (simple_reference
      (reference_target))))

================================================================================
Reference with replacement text
================================================================================
{{!Foo.bar} replacement text}
--------------------------------------------------------------------------------

(document
  (paragraph
    (reference_with_text
      (reference_target)
      (word)
      (word))))

================================================================================
Simple link
================================================================================
{:https://example.com}
--------------------------------------------------------------------------------

(document
  (paragraph
    (simple_link
      (link_target))))

================================================================================
Link with replacement text
================================================================================
{{:https://example.com} click here}
--------------------------------------------------------------------------------

(document
  (paragraph
    (link_with_text
      (link_target)
      (word)
      (word))))

================================================================================
Reference after word
================================================================================
a {!Foo}
--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (simple_reference
      (reference_target))))

================================================================================
Typed reference
================================================================================
{!val:foo}
--------------------------------------------------------------------------------

(document
  (paragraph
    (simple_reference
      (reference_target))))

================================================================================
Link in paragraph
================================================================================
text {:https://example.com} more
--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (simple_link
      (link_target))
    (word)))

================================================================================
Reference with styled text
================================================================================
text {{!Foo} styled} more
--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (reference_with_text
      (reference_target)
      (word))
    (word)))

================================================================================
Link with styled text in paragraph
================================================================================
text {{:https://example.com} link text} more
--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (link_with_text
      (link_target)
      (word)
      (word))
    (word)))

================================================================================
Multiple references in paragraph
================================================================================
see {!Foo} and {!Bar}
--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (simple_reference
      (reference_target))
    (word)
    (simple_reference
      (reference_target))))

================================================================================
Simple image media (reference target)
================================================================================
{image!media/diagram.png}
--------------------------------------------------------------------------------

(document
  (paragraph
    (simple_media
      (media_target))))

================================================================================
Simple video media (link target)
================================================================================
{video:https://example.com/v.mp4}
--------------------------------------------------------------------------------

(document
  (paragraph
    (simple_media
      (media_target))))

================================================================================
Audio media with replacement text
================================================================================
{{audio!sound.mp3} listen here}
--------------------------------------------------------------------------------

(document
  (paragraph
    (media_with_text
      (media_target)
      (word)
      (word))))
