test/corpus/styles.txt
================================================================================
Bold
================================================================================
{b bold text}
--------------------------------------------------------------------------------

(document
  (paragraph
    (bold
      (word)
      (word))))

================================================================================
Italic
================================================================================
{i italic text}
--------------------------------------------------------------------------------

(document
  (paragraph
    (italic
      (word)
      (word))))

================================================================================
Emphasis
================================================================================
{e emphasis text}
--------------------------------------------------------------------------------

(document
  (paragraph
    (emphasis
      (word)
      (word))))

================================================================================
Superscript
================================================================================
{^ super}
--------------------------------------------------------------------------------

(document
  (paragraph
    (superscript
      (word))))

================================================================================
Subscript
================================================================================
{_ sub}
--------------------------------------------------------------------------------

(document
  (paragraph
    (subscript
      (word))))

================================================================================
Nested styles
================================================================================
{b bold and {i italic}}
--------------------------------------------------------------------------------

(document
  (paragraph
    (bold
      (word)
      (word)
      (italic
        (word)))))

================================================================================
Deeply nested styles
================================================================================
{b {i {e deeply nested}}}
--------------------------------------------------------------------------------

(document
  (paragraph
    (bold
      (italic
        (emphasis
          (word)
          (word))))))

================================================================================
Multiple styles in paragraph
================================================================================
text {b bold} and {i italic} end
--------------------------------------------------------------------------------

(document
  (paragraph
    (word)
    (bold
      (word))
    (word)
    (italic
      (word))
    (word)))

================================================================================
Empty bold
================================================================================
{b}
--------------------------------------------------------------------------------

(document
  (paragraph
    (bold)))
